compiler/tests/fail/arm-m4/intrinsic_revS.jazz
export
fn rev(reg u32 x) -> reg u32 {
  reg u32 y;
  ?{}, y = #REVS(x);
  return y;
}
